<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.recommendation.questionere.FourthQuestionFragment">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_inter_regular"
        android:text="@string/question_4"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question">

        <RadioButton
            android:id="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/QuestionnaireCheckbox"
            android:paddingVertical="16dp"
            android:buttonTint="@color/custom_primary_1"
            android:text="@string/question4_answer1"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/QuestionnaireCheckbox"
            android:paddingVertical="16dp"
            android:buttonTint="@color/custom_primary_1"
            android:text="@string/question4_answer2"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/QuestionnaireCheckbox"
            android:paddingVertical="16dp"
            android:buttonTint="@color/custom_primary_1"
            android:text="@string/question4_answer3"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/QuestionnaireCheckbox"
            android:paddingVertical="16dp"
            android:buttonTint="@color/custom_primary_1"
            android:text="@string/question4_answer4"
            android:textColor="@color/black" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>