<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingTop="24dp"
        tools:context=".ui.dashboard.home.HomeFragment">

        <LinearLayout
            android:id="@+id/card_home_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_home_header"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_inter_semibold"
                android:text="@string/card_home_header_text_1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font_inter_regular"
                android:text="@string/card_home_header_text_2"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_find_outfit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingVertical="12dp"
                android:backgroundTint="@color/white"
                android:text="@string/find_outfit"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/font_inter_semibold"
                android:textAllCaps="false"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_TopsRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_inter_semibold"
            android:layout_marginTop="16dp"
            android:text="@string/home_rec_tops"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_home_header_layout"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopsRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_TopsRecommendation"/>

        <TextView
            android:id="@+id/tv_BottomsRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_inter_semibold"
            android:layout_marginTop="8dp"
            android:text="@string/home_rec_bottoms"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvTopsRecommendation"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBottomsRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_BottomsRecommendation"/>

        <TextView
            android:id="@+id/tv_FootwearRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_inter_semibold"
            android:layout_marginTop="8dp"
            android:text="@string/home_rec_footwears"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvBottomsRecommendation"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFootwearRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_FootwearRecommendation"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
