<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_primary_1"
    tools:context=".ui.recommendation.FindOutfitActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="28dp"
            android:paddingVertical="24dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:background="@color/white"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="28dp">

                    <TextView
                        android:id="@+id/tv_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_an_answer"
                        android:textColor="#747474"
                        android:textSize="12sp"
                        android:layout_marginHorizontal="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/question_viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_header" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:layout_marginHorizontal="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/question_viewpager">

                        <Button
                            android:id="@+id/back_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/back_question"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <Button
                            android:id="@+id/next_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="40dp"
                            android:text="@string/next_question"
                            android:textAllCaps="false"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/finish_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="40dp"
                            android:text="@string/finish_question"
                            android:visibility="gone"
                            android:textAllCaps="false"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingTop="20dp"
        android:paddingBottom="14dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/find_your_outfit"
            android:fontFamily="@font/font_inter_semibold"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tv_remainingquestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_counter"
            android:fontFamily="@font/font_inter_regular"
            android:textColor="@color/white" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:indeterminate="false"
            android:max="4"
            android:progress="1"
            app:indicatorColor="@color/custom_primary_2"
            app:trackColor="@color/white"
            app:trackCornerRadius="10dp"
            app:trackThickness="7dp" />

    </LinearLayout>


</FrameLayout>