<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recommendation.RecommendationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_back_24" />


            <ImageView
                android:id="@+id/searchButton"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_search_24" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_TopsRecommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:fontFamily="@font/font_inter_semibold"
        android:layout_marginTop="8dp"
        android:text="@string/home_rec_tops"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTopsRecommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_TopsRecommendation"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvTopsRecommendation">

        <TextView
            android:id="@+id/tv_BottomsRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:fontFamily="@font/font_inter_semibold"
            android:layout_marginTop="16dp"
            android:text="@string/home_rec_bottoms"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBottomsRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_BottomsRecommendation"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_FootwearRecommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:fontFamily="@font/font_inter_semibold"
        android:layout_marginTop="16dp"
        android:text="@string/home_rec_footwears"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_middle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFootwearRecommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_FootwearRecommendation"/>

</androidx.constraintlayout.widget.ConstraintLayout>